--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -37,8 +37,13 @@
     <action id="ldapbrowser.openConnections" class="org.majki.intellij.ldapbrowser.actions.OpenConnectionsAction" text="Open Connections">
       <add-to-group group-id="ldapbrowser.actionGroup"/>
     </action>
-
-    <action id="ldapbrowser.refresh" class="org.majki.intellij.ldapbrowser.actions.RefreshAction" text="Refresh">
+    <action id="ldapbrowser.refresh" class="org.majki.intellij.ldapbrowser.actions.RefreshAction" text="Refresh" description="Refresh selected node">
+      <add-to-group group-id="ldapbrowser.actionGroup"/>
+    </action>
+    <action id="ldapbrowser.addEntry" class="org.majki.intellij.ldapbrowser.actions.AddEntryAction" text="Add entry" description="Add a new entry">
+      <add-to-group group-id="ldapbrowser.actionGroup"/>
+    </action>
+    <action id="ldapbrowser.deleteEntry" class="org.majki.intellij.ldapbrowser.actions.DeleteEntryAction" text="Delete Entry" description="Deletes the selected Entry">
       <add-to-group group-id="ldapbrowser.actionGroup"/>
     </action>
 
@@ -48,7 +53,7 @@
     <action id="ldapbrowser.removeValue" class="org.majki.intellij.ldapbrowser.actions.RemoveValueAction" text="Remove value" description="Remove value from Entry">
       <add-to-group group-id="ldapbrowser.editorActionGroup"/>
     </action>
-    <action id="ldapbrowser.refreshEditorAction" class="org.majki.intellij.ldapbrowser.actions.RefreshEditorAction" text="Refresh editor" description="Refresh the attributes in editor">
+    <action id="ldapbrowser.refreshEditor" class="org.majki.intellij.ldapbrowser.actions.RefreshEditorAction" text="Refresh editor" description="Refresh the attributes in editor">
       <add-to-group group-id="ldapbrowser.editorActionGroup"/>
     </action>
   </actions>
