--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>org.majki.intellij.ldapbrowser</id>
   <name>LDAP browser</name>
-  <version>1.2</version>
+  <version>1.3</version>
   <vendor email="support@majki.org" url="http://ldapbrowser.majki.org">Majki</vendor>
 
   <description><![CDATA[
@@ -12,6 +12,12 @@
 
   <change-notes><![CDATA[
       <ul>
+      <li>
+        1.3</br>
+        <ul>
+          <li>Fixed NPE when connecting to some type of LDAP servers</li>
+        </ul>
+      </li>
       <li>
         1.2</br>
         <ul>
