ensure bitbucket-pipelines can run gradle wrapper

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,7 @@ pipelines:
           - gradle               # pre-defined cache
           - gradlewrapper        # custom cache
         script:
-          - ./gradlew buildPlugin
+          - bash ./gradlew buildPlugin
 
 definitions:
   caches:
