--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
+[*.properties]
+charset = latin1
+
 # Indentation override for all XML / Yaml
 [*.{xml,yml}]
 indent_size = 2
