--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,6 @@
-# Available idea versions:
-# https://www.jetbrains.com/intellij-repository/releases
-# https://www.jetbrains.com/intellij-repository/snapshots
-
-version = 1.4-SNAPSHOT
-ideaVersion = 2018.1
-javaVersion = 1.8
+version=1.4-SNAPSHOT
+ideaVersion=2018.1
+javaVersion=1.8
+apacheDirectoryApiVersion=1.0.2
 
 org.gradle.logging.level=info
