--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 
   <description><![CDATA[
       Plugin to browse LDAP servers<br/>
-      Using Apache Directory LDAP API version 1.0.2<br/>
+      Using Apache Directory LDAP API version @apacheDirectoryApiVersion@<br/>
       Currently supported authentication methods are anonymous and simple authentication<br/>
     ]]></description>
 
@@ -16,6 +16,7 @@
         1.4</br>
         <ul>
           <li>Fixed reading/writing attributes</li>
+          <li>Apache Directory API version upgrade to 1.0.2</li>
         </ul>
       </li>
       <li>
@@ -50,11 +51,7 @@
     ]]>
   </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
   <idea-version since-build="171" />
-
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
   <depends>com.intellij.modules.lang</depends>
 
   <resource-bundle>i18n</resource-bundle>
