plugin.xml change notes update

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -13,6 +13,12 @@
   <change-notes><![CDATA[
       <ul>
       <li>
+        1.4-SNAPSHOT</br>
+        <ul>
+          <li>Apache Directory API version upgrade to 2.0.0.AM2</li>
+        </ul>
+      </li>
+      <li>
         1.4</br>
         <ul>
           <li>Fixed reading/writing attributes</li>
@@ -51,7 +57,7 @@
     ]]>
   </change-notes>
 
-  <idea-version since-build="171" />
+  <idea-version since-build="171"/>
   <depends>com.intellij.modules.lang</depends>
 
   <resource-bundle>i18n</resource-bundle>
@@ -82,17 +88,21 @@
     <action id="ldapbrowser.addEntry" class="org.majki.intellij.ldapbrowser.actions.AddEntryAction" text="Add entry" description="Add a new entry">
       <add-to-group group-id="ldapbrowser.actionGroup"/>
     </action>
-    <action id="ldapbrowser.deleteEntry" class="org.majki.intellij.ldapbrowser.actions.DeleteEntryAction" text="Delete Entry" description="Deletes the selected Entry">
+    <action id="ldapbrowser.deleteEntry" class="org.majki.intellij.ldapbrowser.actions.DeleteEntryAction" text="Delete Entry"
+            description="Deletes the selected Entry">
       <add-to-group group-id="ldapbrowser.actionGroup"/>
     </action>
 
-    <action id="ldapbrowser.refreshEditor" class="org.majki.intellij.ldapbrowser.actions.RefreshEditorAction" text="Refresh editor" description="Refresh the attributes in editor">
+    <action id="ldapbrowser.refreshEditor" class="org.majki.intellij.ldapbrowser.actions.RefreshEditorAction" text="Refresh editor"
+            description="Refresh the attributes in editor">
       <add-to-group group-id="ldapbrowser.editorActionGroup"/>
     </action>
-    <action id="ldapbrowser.addAttribute" class="org.majki.intellij.ldapbrowser.actions.AddAttributeAction" text="Add attribute" description="Adds an attribute to the entry">
+    <action id="ldapbrowser.addAttribute" class="org.majki.intellij.ldapbrowser.actions.AddAttributeAction" text="Add attribute"
+            description="Adds an attribute to the entry">
       <add-to-group group-id="ldapbrowser.editorActionGroup"/>
     </action>
-    <action id="ldapbrowser.removeValue" class="org.majki.intellij.ldapbrowser.actions.RemoveValueAction" text="Remove value" description="Remove value from Entry" use-shortcut-of="$Delete">
+    <action id="ldapbrowser.removeValue" class="org.majki.intellij.ldapbrowser.actions.RemoveValueAction" text="Remove value"
+            description="Remove value from Entry" use-shortcut-of="$Delete">
       <add-to-group group-id="ldapbrowser.editorActionGroup"/>
     </action>
   </actions>
