--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -13,6 +13,12 @@
   <change-notes><![CDATA[
       <ul>
       <li>
+        1.6-SNAPSHOT</br>
+        <ul>
+          <li>...</li>
+        </ul>
+      </li>
+      <li>
         1.5</br>
         <ul>
           <li>Apache Directory API version upgrade to 2.0.0.AM3</li>
