--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -75,8 +75,11 @@
     ]]>
   </change-notes>
 
-  <idea-version since-build="171"/>
+  <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
+  <idea-version since-build="203" until-build="211.*"/>
+
   <depends>com.intellij.modules.lang</depends>
+  <depends>com.intellij.modules.platform</depends>
 
   <resource-bundle>i18n</resource-bundle>
 
